Add ElevenLabs conversational AI widget and quantum helper system prompt

--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
         </div>
     </div>
 
+    <!-- ElevenLabs Conversational AI Widget -->
+    <elevenlabs-convai agent-id="agent_1301kebgtxzmebetg0v7cv272cet"></elevenlabs-convai>
+    
     <script src="app.js"></script>
+    <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
 </body>
 </html>
